emby/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: emby
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"

spec:
  tls:
  - hosts:
    - emby.casa.lan
    secretName: casa.lan
  rules:
  - host: emby.casa.lan
    http:
      paths:
      - path: /
        backend:
          serviceName: emby
          servicePort: 8096
